--- a/A3_Website/config.toml
+++ b/A3_Website/config.toml
@@ -5,7 +5,7 @@ theme = "gohugo-theme-ananke"
 
 DefaultContentLanguage = "en"
 SectionPagesMenu = "main"
-Paginate = 10 # this is set low for demonstrating with dummy content. Set to a higher number
+Paginate = 1 # this is set low for demonstrating with dummy content. Set to a higher number
 googleAnalytics = ""
 enableRobotsTXT = true
 
@@ -22,7 +22,7 @@ enableRobotsTXT = true
   twitter = ""
   instagram = ""
   youtube = ""
-  github = ""
+  github = "https://github.com/thesherlock22/comm2501Ass3"
   gitlab = ""
   linkedin = "https://www.linkedin.com/in/alexander-lau-31b62917b/"
   mastodon = ""
@@ -32,4 +32,4 @@ enableRobotsTXT = true
   # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-dark-gray"
   featured_image = "./daphne-fecheyr-airpollution.jpg"
-  recent_posts_number = 2
+  recent_posts_number = 1
